<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="2dp"
    tools:layout_editor_absoluteY="-8dp">

    <Button
        android:id="@+id/goButton"
        android:layout_width="187dp"
        android:layout_height="146dp"
        android:alpha="1"
        android:backgroundTint="#5BE91E"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="startTheGame"
        android:text="@string/go"
        android:textColor="@color/black"
        android:textSize="50dp"
        android:visibility="invisible"
        app:layout_column="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_row="0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            app:columnCount="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeTextView"
            app:rowCount="2">

            <Button
                android:id="@+id/button1"
                android:layout_width="187dp"
                android:layout_height="146dp"
                android:backgroundTint="#E91E63"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="buttonClicked"
                android:tag="0"
                android:text="@string/ten"
                android:textColor="@color/black"
                android:textSize="40sp"
                app:layout_column="0"
                app:layout_row="0" />

            <Button
                android:id="@+id/button2"
                android:layout_width="187dp"
                android:layout_height="146dp"
                android:backgroundTint="#FF5722"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="buttonClicked"
                android:tag="1"
                android:text="@string/ten"
                android:textColor="@color/black"
                android:textSize="40sp"
                app:layout_column="1"
                app:layout_row="0" />

            <Button
                android:id="@+id/button3"
                android:layout_width="187dp"
                android:layout_height="146dp"
                android:backgroundTint="#2196F3"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="buttonClicked"
                android:tag="2"
                android:text="@string/ten"
                android:textColor="@color/black"
                android:textSize="40sp"
                app:layout_column="0"
                app:layout_row="1" />

            <Button
                android:id="@+id/button4"
                android:layout_width="187dp"
                android:layout_height="146dp"
                android:backgroundTint="#4CAF50"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="buttonClicked"
                android:tag="3"
                android:text="@string/ten"
                android:textColor="@color/black"
                android:textSize="40sp"
                app:layout_column="1"
                app:layout_row="1" />

        </androidx.gridlayout.widget.GridLayout>

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="#FFC107"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/thirty_seconds"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/answerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="138dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="136dp"
            android:layout_marginBottom="195dp"
            android:text="@string/answer"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="#00BCD4"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/deafault_score"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/taskTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="31dp"
            android:text="@string/deafault_task"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/gridLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/endGameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/tryAgainButton"
            android:layout_width="182dp"
            android:layout_height="62dp"
            android:layout_marginStart="115dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="114dp"
            android:layout_marginBottom="334dp"
            android:backgroundTint="#5BE91E"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="tryAgain"
            android:text="@string/try_again"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_column="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/finalScoreTextView"
            app:layout_row="0" />

        <TextView
            android:id="@+id/finalScoreTextView"
            android:layout_width="151dp"
            android:layout_height="120dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="186dp"
            android:layout_marginEnd="130dp"
            android:background="#E91E63"
            android:gravity="center"
            android:text="@string/final_score"
            android:textAlignment="center"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>